--- a/backend/package.json
+++ b/backend/package.json
@@ -12,17 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@huggingface/inference": "^4.13.5",
-    "@tensorflow-models/mobilenet": "^2.1.1",
-    "@tensorflow/tfjs": "^4.22.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jpeg-js": "^0.4.4",
     "mongoose": "^9.1.3",
     "multer": "^2.0.2",
-    "node-fetch": "^3.3.2",
-    "ollama": "^0.6.3",
-    "openai": "^6.16.0"
+    "node-fetch": "^3.3.2"
   }
 }
